# PROJEKTA2

./: .gitignore  AVL.cpp  AVL.h  BST.cpp  BST.h  CMakeLists.txt  InputProcesor.cpp  InputProcesor.h  OPT.h  TreeBase.cpp  TreeBase.h  main.cpp  opt.cpp  pocet_slov.cpp
